--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
   <head>
-    <title>Kubernetes page</title>
+    <title>I Love Kubernetes</title>
     <meta charset="utf-8" />
   </head>
   <body>
     <h1>
-      I Love Kubernetes!
+      Please don't forget to subscribe my channel! :)
     </h1>
   </body>
 </html>
